# aws-data-engineering-lab

./: .gitignore  README.md
athena/: athena_management.md  athena_python_examples.md  athena_queries.md
aws_backup/: backup_management.md  backup_python_examples.md
boto3/: authentication.md  best_practices.md  error_handling.md  pagination.md  (+2 more)
s3/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  s3_basic_commands.md  s3_bucket_creating.md  s3_bucket_management.md  s3_bucket_management_using_python.ipynb  s3_command_.ipynb  s3_file_operations.md  s3_lifecycle_versioning.md  s3_python_boto3_examples.md  s3_security_permissions.md  s3_working_command.md
s3/assets/: architecture-overview.md  sample-object.txt
s3/configs/: default.ini  lifecycle-data-lake.json  tls-only-bucket-policy.json
s3/docs/: authentication.md  aws_cli_to_boto3.md  data_lake_design.md  s3_operations_reference.md
s3/examples/: 01_authentication_identity.py  02_bucket_management.py  03_object_workflows.py  04_secure_data_lake.py  05_data_lake_keys.py  06_data_engineering_integrations.py  07_backup_automation.py
s3/scripts/: run_unit_tests.sh  s3lab_bucket_exists.py
s3/src/s3_learning/: __init__.py  buckets.py  cli.py  config.py  datalake.py  errors.py  lifecycle.py  logging_utils.py  objects.py  retry.py  security.py  session.py
s3/tests/: conftest.py  test_buckets.py  test_config.py  test_datalake.py  test_objects.py  test_repository_validation.py  test_security_lifecycle.py  test_unittest_style.py
s3/utilities/: validate_repository.py
(+68 files in other folders)
